# icongenai

./: .gitignore  README.md  brand.py  pyproject.toml
models/icongenai-lora/: adapter_config.json
notebooks/: 01_explore_filtered.ipynb  02_model_comparison.ipynb  03_metrics.ipynb  04_explore_captioned.ipynb  05_prepare_training.ipynb  06_training_results.ipynb
scripts/: 00_download_models.py  01_collect.py  02_caption.py  02b_fix_captions.py  03_filter.py  03_prepare.py  04_merge.py  04_train.sh  05_generate.py  05_prepare.py  06_evaluate.py  06_train.py  06_train.sh  06_train_test_mac.sh  07_compare.py  07_generate.py  08_evaluate.py  09_compare.py
study/: Makefile  main.aux  main.bbl  main.bcf  main.blg  main.out  main.tex  references.bib
study/sections/: abstract.tex  analysis.tex  conclusion.tex  dataset.tex  experiments.tex  introduction.tex  method.tex  related_work.tex
